k8s/tenant-example/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-lab01
  labels:
    tenant: lab01
    app: senaite
